syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.flexsmc";
option java_outer_classname = "Gateway";

package flexsmc;

// Interface exported by the gateway.
service Gateway {
    rpc Ping(SMCInfo) returns (CmdResult) {}
    rpc AwaitSMCCommands(SMCInfo) returns (stream SMCCmd) {}
}

message SMCInfo {
    // tcpport
    uint32 tcpport = 1;
}

message SMCCmd {
    // Categories:
    // * SMCInstruction (Prepare, Start)
    // * (ACK)
    enum Type {
        PREPARE = 0;
        SESSION = 1;
        // ...
        ABORT   = 127;
    }
    Type type           = 1;
    uint64 sessionID    = 2;
    // Payload packet
    oneof payload {
        Prepare prepare = 3;
    }
}

enum DataOrigin {
    TEMPERATURE  = 0;
    HUMIDITY     = 1;
    AMBIENT      = 2;
    AIR_PRESSURE = 3;

    PRESENCE     = 10;

    // Dynamically assigned sensor types.
    RESERVED_999             = 999;
    DYNAMIC_ASSIGNMENT_1000  = 1000;
    // ...
    DYNAMIC_ASSIGNMENT_99999 = 99999;
    RESERVED_100000          = 100000;
}

enum Aggregator {
    SUM             = 0;
    AVG             = 1;
    MEDIAN          = 2;
    STD_DEVIATION   = 3;
}

message Prepare {
    message Participant {
        string identity = 1;
        string addr     = 2;
    }
    repeated Participant participants = 1;
    DataOrigin source                 = 2;
    // (Pre)Selectors
    Aggregator Aggregator             = 4;
}

message CmdResult {
    enum Status {
        SUCCESS     = 0;
        UNKNOWN_CMD = 1;
        DENIED      = 2;
    }
    Status status = 1;
    string msg    = 2;
}