syntax = "proto3";

package smc;

option java_multiple_files = true;
option java_package = "de.tum.flexsmc.smc.rpc";
option java_outer_classname = "SMCConnector";
option objc_class_prefix = "SMCC";

import "github.com/grandcat/flexsmc/proto/job/job.proto";

service SMC {
  // ResetAll stops and removes all open sessions.
  rpc ResetAll (FilterArgs) returns (job.CmdResult) {}
  // Init acquires a new session providing a dedicated SMC instance.
  rpc Init (SessionCtx) returns (job.CmdResult) {}
  // NextCmd runs the supplied command on the current instance.
  // The header must include the session-id to work.
  // In case of an illegal sequence of commands or in case of other errors,
  // the session might be teared down at any time.
  rpc NextCmd (job.SMCCmd) returns (job.CmdResult) {}
  // TearDown stops the current session at any state.
  rpc TearDown (SessionCtx) returns (job.CmdResult) {}
}

message SessionCtx {
  string sessionID = 1;
}

message FilterArgs {

}
